# xrtc-webrtc-m96

./: README.md
xrtcsdk/xrtcsdk/xrtc/: CMakeLists.txt  xrtc.cpp  xrtc.h
xrtcsdk/xrtcsdk/xrtc/base/: xrtc_global.cpp  xrtc_global.h  xrtc_http.cpp  xrtc_http.h  xrtc_json.cpp  xrtc_json.h  xrtc_thread.cpp  xrtc_thread.h
xrtcsdk/xrtcsdk/xrtc/codec/: common_encoder.h  external_video_encoder_factory.cpp  external_video_encoder_factory.h  nv_encoder.cpp  nv_encoder.h  qsv_encoder.cpp  qsv_encoder.h
xrtcsdk/xrtcsdk/xrtc/device/: audio_track.cpp  audio_track.h  camera_video_source.cpp  camera_video_source.h  desktop_capturer.cpp  desktop_capturer.h  desktop_video_source.cpp  desktop_video_source.h  mic_impl.cpp  mic_impl.h  vcm_capturer.cpp  vcm_capturer.h  video_capturer.cpp  video_capturer.h
xrtcsdk/xrtcsdk/xrtc/media/: media_frame.h  stats_collector.cpp  stats_collector.h  xrtc_media_base.cpp  xrtc_media_base.h  xrtc_preview.cpp  xrtc_preview.h  xrtc_pull_impl.cpp  xrtc_pull_impl.h  xrtc_puller.cpp  xrtc_puller.h  xrtc_push_impl.cpp  xrtc_push_impl.h  xrtc_pusher.cpp  xrtc_pusher.h
xrtcsdk/xrtcsdk/xrtc/render/: video_renderer.cpp  video_renderer.h
xrtcsdk/xrtcsdk/xrtc/render/win/: d3d_renderer.cpp  d3d_renderer.h
xrtcsdk/xrtcsdk/xrtc/tools/: logstreamfile.cpp  utils.cpp  utils.h  uuid4.cpp
xrtcserver/: CMakeLists.txt  build.sh
xrtcserver/conf/: general.yaml
xrtcserver/src/: main.cpp  xrtcserver_def.h
xrtcserver/src/audio/: audio_receive_stream.cpp  audio_receive_stream.h  audio_send_stream.cpp  audio_send_stream.h  audio_stream_config.h
xrtcserver/src/base/: async_udp_socket.cpp  async_udp_socket.h  event_loop.cpp  event_loop.h  lock_free_queue.h  log.cpp  log.h  network.cpp  network.h  socket.cpp  socket.h  utils.h  xhead.h
xrtcserver/src/call/: rtp_packet_sink_interface.h
xrtcserver/src/ice/: candidate.cpp  candidate.h  ice_agent.cpp  ice_agent.h  ice_connection.cpp  ice_connection.h  ice_connection_info.h  ice_controller.cpp  ice_controller.h  ice_credentials.cpp  ice_credentials.h  ice_def.h  ice_transport_channel.cpp  ice_transport_channel.h  port_allocator.cpp  port_allocator.h  stun.cpp  stun.h  stun_request.cpp  stun_request.h  udp_port.cpp  udp_port.h
xrtcserver/src/modules/pacing/: interval_budget.cpp  interval_budget.h  pacing_controller.cpp  pacing_controller.h  round_robin_packet_queue.cpp  round_robin_packet_queue.h  task_queue_paced_sender.cpp  task_queue_paced_sender.h
xrtcserver/src/modules/rtp_rtcp/: rtcp_nack_stats.cpp  rtcp_nack_stats.h  rtcp_packet.cpp  rtcp_packet.h  rtcp_receiver.cpp  rtcp_receiver.h  rtcp_sender.cpp  rtcp_sender.h  rtp_format.cpp  rtp_format.h  rtp_format_h264.cpp  rtp_format_h264.h  rtp_packet.cpp  rtp_packet.h  rtp_packet_to_send.cpp  rtp_packet_to_send.h  rtp_rtcp_impl.cpp  rtp_rtcp_impl.h  rtp_rtcp_interface.h  rtp_utils.cpp  rtp_utils.h
xrtcserver/src/modules/rtp_rtcp/include/: receive_statistics.h  receive_statistics_impl.cpp  receive_statistics_impl.h  rtcp_statistics.h  rtp_dependency_descriptor_extension.cpp  rtp_dependency_descriptor_extension.h  rtp_generic_frame_descriptor_extension.cpp  rtp_generic_frame_descriptor_extension.h  rtp_header_extension_map.cpp  rtp_header_extension_map.h  rtp_header_extensions.cpp  rtp_header_extensions.h  rtp_packet_received.cc  rtp_packet_received.h  (+4 more)
xrtcserver/src/modules/video_coding/: histogram.cpp  histogram.h  nack_requester.cpp  nack_requester.h
xrtcserver/src/pc/: codec_info.h  dtls_srtp_transport.cpp  dtls_srtp_transport.h  dtls_transport.cpp  dtls_transport.h  peer_connection.cpp  peer_connection.h  peer_connection_def.h  rtp_transport_controller_send.cpp  rtp_transport_controller_send.h  session_description.cpp  session_description.h  srtp_session.cpp  srtp_session.h  srtp_transport.cpp  srtp_transport.h  stream_params.cpp  stream_params.h  transport_controller.cpp  transport_controller.h
xrtcserver/src/server/: rtc_server.cpp  rtc_server.h  rtc_worker.cpp  rtc_worker.h  settings.cpp  settings.h  signaling_server.cpp  signaling_server.h  signaling_worker.cpp  signaling_worker.h  tcp_connection.cpp  tcp_connection.h
xrtcserver/src/stream/: pull_stream.cpp  pull_stream.h  push_stream.cpp  push_stream.h  rtc_stream.cpp  rtc_stream.h  rtc_stream_manager.cpp  rtc_stream_manager.h
xrtcserver/src/video/: video_receive_stream.cpp  video_receive_stream.h  video_send_stream.cpp  video_send_stream.h  video_stream_config.h
(+51 files in other folders)
